--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,8 +6,8 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #5023B6;
-  --ifm-color-primary-dark: #5023B6;
+  --ifm-color-primary: #45C5F2;
+  --ifm-color-primary-dark: #45C5F2;
   --ifm-color-primary-darker: #DFF34F;
   --ifm-color-primary-darkest: #DFF34F;
   --ifm-color-primary-light: #DFF34F;
